# oss-fuzz

./: README.md  preserve_run_logs_and_files_yara.sh
manual_code_testing/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fuzz_test_code  fuzz_test_code.cc  test_rule.yar  test_rule.yarc
manual_fuzz_testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fuzz_target  fuzz_target.cc
manual_fuzz_testing/test_example/: valid_rule.yar
manual_libfuzz_test/: CMakeCache.txt  CMakeLists.txt  Makefile  abc  cmake_install.cmake  fuzz_test_code  fuzz_test_code.cc  tamper.py  test.yarc  test_rule_invalid.yarc  valid.yar  yara_fuzzer_target.cc
manual_testing/: README.md  fuzz_target  fuzz_target.cc
manual_testing/test_example/: valid_rule.yarc
manual_testing/yara/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool  libyara.la  yara  yara.pc  yarac
manual_testing/yara/autom4te.cache/: output.0  output.3  requests  traces.0  traces.2  traces.3
manual_testing/yara/cli/.deps/: args.Po  common.Po  threading.Po  yara.Po  yarac.Po
manual_testing/yara/libyara/: la-ahocorasick.lo  la-arena.lo  la-atoms.lo  la-base64.lo  la-bitmask.lo  la-compiler.lo  la-endian.lo  la-exec.lo  la-exefiles.lo  la-filemap.lo  la-grammar.lo  la-hash.lo  la-hex_grammar.lo  la-hex_lexer.lo  la-lexer.lo  la-libyara.lo  la-mem.lo  la-modules.lo  la-notebook.lo  la-object.lo  la-parser.lo  la-proc.lo  la-re.lo  la-re_grammar.lo  la-re_lexer.lo  la-rules.lo  la-scan.lo  la-scanner.lo  la-simple_str.lo  la-sizedstr.lo  la-stack.lo  la-stopwatch.lo  la-stream.lo  la-strutils.lo  la-threading.lo
manual_testing/yara/libyara/.deps/: la-ahocorasick.Plo  la-arena.Plo  la-atoms.Plo  la-base64.Plo  la-bitmask.Plo  la-compiler.Plo  la-endian.Plo  la-exec.Plo  la-exefiles.Plo  la-filemap.Plo  la-grammar.Plo  la-hash.Plo  la-hex_grammar.Plo  la-hex_lexer.Plo  la-lexer.Plo  la-libyara.Plo  la-mem.Plo  la-modules.Plo  la-notebook.Plo  la-object.Plo  la-parser.Plo  la-proc.Plo  la-re.Plo  la-re_grammar.Plo  la-re_lexer.Plo  la-rules.Plo  la-scan.Plo  la-scanner.Plo  la-simple_str.Plo  la-sizedstr.Plo  la-stack.Plo  la-stopwatch.Plo  la-stream.Plo  la-strutils.Plo  la-threading.Plo
manual_testing/yara/libyara/modules/console/: la-console.lo
manual_testing/yara/libyara/modules/console/.deps/: la-console.Plo
manual_testing/yara/libyara/modules/dotnet/: la-dotnet.lo
manual_testing/yara/libyara/modules/dotnet/.deps/: la-dotnet.Plo
manual_testing/yara/libyara/modules/elf/: la-elf.lo
manual_testing/yara/libyara/modules/elf/.deps/: la-elf.Plo
manual_testing/yara/libyara/modules/hash/: la-hash.lo
manual_testing/yara/libyara/modules/hash/.deps/: la-hash.Plo
manual_testing/yara/libyara/modules/math/: la-math.lo
manual_testing/yara/libyara/modules/math/.deps/: la-math.Plo
manual_testing/yara/libyara/modules/pe/: la-pe.lo  la-pe_utils.lo
manual_testing/yara/libyara/modules/pe/.deps/: la-pe.Plo  la-pe_utils.Plo
manual_testing/yara/libyara/modules/pe/authenticode-parser/: la-authenticode.lo  la-certificate.lo  la-countersignature.lo  la-helper.lo  la-structs.lo
manual_testing/yara/libyara/modules/pe/authenticode-parser/.deps/: la-authenticode.Plo  la-certificate.Plo  la-countersignature.Plo  la-helper.Plo  la-structs.Plo
manual_testing/yara/libyara/modules/string/: la-string.lo
manual_testing/yara/libyara/modules/string/.deps/: la-string.Plo
manual_testing/yara/libyara/modules/tests/: la-tests.lo
manual_testing/yara/libyara/modules/tests/.deps/: la-tests.Plo
manual_testing/yara/libyara/modules/time/: la-time.lo
manual_testing/yara/libyara/modules/time/.deps/: la-time.Plo
manual_testing/yara/libyara/proc/: la-linux.lo
manual_testing/yara/libyara/proc/.deps/: la-linux.Plo
manual_testing/yara/libyara/tlshc/: la-tlsh.lo  la-tlsh_impl.lo  la-tlsh_util.lo
manual_testing/yara/libyara/tlshc/.deps/: la-tlsh.Plo  la-tlsh_impl.Plo  la-tlsh_util.Plo
projects/yara/: Dockerfile  build.sh  project.yaml  yara_rules_fuzzer.cc
